# claude-commander

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: AUDIT.md  DESIGN.md  ORCHESTRATION.md
src/: App.tsx  clipboard.ts  demo.ts  dialog.ts  dnd.ts  ipc.ts  main.tsx  store.ts  styles.css  terminals.ts  types.ts  useDropdown.ts  util.ts  warmup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accounts.rs  db.rs  failover.rs  git.rs  handover.rs  main.rs  mcp.rs  misc.rs  models.rs  orchestration.rs  pipeline.rs  platform.rs  pools.rs  projects.rs  pty.rs  state.rs  statusline.rs  tasks.rs  usage.rs  warmup.rs
src/components/: AccountCard.tsx  ErrorBoundary.tsx  FailoverModal.tsx  FileTree.tsx  LaunchModal.tsx  TaskPanel.tsx  TerminalPane.tsx  Toasts.tsx  UsageBar.tsx
src/views/: Dashboard.tsx  PoolsView.tsx  Projects.tsx  SettingsView.tsx  TerminalGrid.tsx  WorkersView.tsx
