[package]
name = "claude-commander"
version = "0.4.0"
edition = "2021"
description = "Multi-account command center for Claude Code"

[features]
# Serve the embedded frontend instead of devUrl. `tauri build` turns this on itself;
# a direct `cargo build --release` MUST pass `--features custom-protocol` or the exe
# tries to load the vite dev server and shows "can't reach this page".
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
portable-pty = "0.8"
base64 = "0.22"
chrono = "0.4"
dirs = "5"

[profile.release]
opt-level = "s"
lto = "thin"
strip = "symbols"
